--- a/src/app/materiales/materiales.component.html
+++ b/src/app/materiales/materiales.component.html
@@ -11,9 +11,12 @@
           <h1>Piedra Caliza</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            La caliza es una roca sedimentaria compuesta mayoritariamente por
+            carbonato de calcio (CaCO3), generalmente calcita, aunque
+            frecuentemente presenta trazas de magnesita (MgCO3) y otros
+            carbonatos.
+          </p>
         </div>
       </div>
     </div>
@@ -28,9 +31,11 @@
           <h1>Andesita</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            La andesita es una roca ígnea volcánica de composición intermedia.
+            Su composición mineral comprende generalmente plagioclasa y varios
+            minerales ferromagnésicos como piroxeno, biotita y hornblenda.
+          </p>
         </div>
       </div>
     </div>
@@ -45,9 +50,14 @@
           <h1>Cobre</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            El cobre, cuyo símbolo es Cu, es el elemento químico de número
+            atómico 29. Se trata de un metal de transición de color cobrizo, es
+            decir, rojizo anaranjado de brillo metálico que, junto con la plata,
+            el oro y el roentgenio forma parte de la llamada familia del cobre,
+            se caracteriza por ser uno de los mejores conductores de
+            electricidad.
+          </p>
         </div>
       </div>
     </div>
@@ -62,9 +72,11 @@
           <h1>Granito</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            El granito es una roca ígnea intrusiva de color claro, de
+            composición félsica formada esencialmente por cuarzo, feldespato
+            alcalino, plagioclasa y mica.
+          </p>
         </div>
       </div>
     </div>
@@ -79,9 +91,10 @@
           <h1>Granito Negro</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            Es una variedad rara de granito. Usado en la construcción de tumbas.
+            Su coloración se debe a un cambio en la composición de la roca.
+          </p>
         </div>
       </div>
     </div>
@@ -96,9 +109,11 @@
           <h1>Ladrillo</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            Pieza de arcilla cocida, generalmente con forma de prisma
+            rectangular, que se usa en la construcción de muros, paredes,
+            pilares, etc.
+          </p>
         </div>
       </div>
     </div>
@@ -113,9 +128,12 @@
           <h1>Marmol</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            El mármol es una roca metamórfica compacta formada a partir de rocas
+            calizas que, sometidas a elevadas temperaturas y presiones, alcanzan
+            un alto grado de cristalización. El componente básico del mármol es
+            el carbonato cálcico, cuyo contenido supera el 90%.
+          </p>
         </div>
       </div>
     </div>
@@ -130,9 +148,12 @@
           <h1>Arenisca</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            La arenisca o psamita es una roca sedimentaria de tipo detrítico, de
+            color variable, que contiene clastos de tamaño arena. Tras las
+            lutitas son las rocas sedimentarias más comunes en la corteza
+            terrestre.
+          </p>
         </div>
       </div>
     </div>
@@ -147,9 +168,12 @@
           <h1>Travertino</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            Travertino es la denominación de una roca sedimentaria de origen
+            parcialmente biogénico formada por depósitos de carbonato de calcio
+            y utilizada con frecuencia en construcción como piedra ornamental,
+            tanto de exterior como de interior.
+          </p>
         </div>
       </div>
     </div>
@@ -164,9 +188,11 @@
           <h1>Bronce</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            El bronce es toda aleación de cobre y estaño, en la que el primero
+            constituye la base y el segundo aparece en una proporción del 3% al
+            20%. Puede incluir otros metales.
+          </p>
         </div>
       </div>
     </div>
@@ -174,16 +200,19 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img
-            src="assets/materiales/caliza.jpg"
+            src="assets/materiales/basalto.jpg"
             alt="Roca"
             style="width: 190px; height: 190px"
           />
-          <h1>Piedra Caliza</h1>
+          <h1>Basalto</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            El basalto es una roca ígnea extrusiva de color oscuro, de
+            composición máfica —rica en silicatos de magnesio y hierro y en
+            sílice—, que constituye una de las rocas más abundantes en la
+            corteza terrestre
+          </p>
         </div>
       </div>
     </div>
@@ -191,16 +220,19 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img
-            src="assets/materiales/caliza.jpg"
+            src="assets/materiales/acero.jpg"
             alt="Roca"
             style="width: 190px; height: 190px"
           />
-          <h1>Piedra Caliza</h1>
+          <h1>Acero</h1>
         </div>
         <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
+          <p>
+            El acero es una aleación de hierro y carbono en un porcentaje de
+            este último elemento variable entre el 0,008% y 2.11% en masa de su
+            composición. La rama de la metalurgia que se especializa en producir
+            acero se denomina siderurgia o acería.
+          </p>
         </div>
       </div>
     </div>
