--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="navbar">
-    <a routerLink="/galeria" >Galeria</a>
-    <a routerLink="/about" >Rocas y Materiales</a>
-    <a id="titulo" href="#" routerLink=""><p>CEMENTERIO </p><p>CENTRAL</p></a>
-    <a routerLink="/contact" >Art + Sci</a>
-    <a routerLink="/login" >Historia</a>
+    <a class="nav-link active" routerLink="/gallery" >Galeria</a>
+    <a class="nav-link active" routerLink="/materials" >Rocas y Materiales</a>
+    <a id="titulo" routerLink=""><p>CEMENTERIO </p><p>CENTRAL</p></a>
+    <a  class="nav-link active" routerLink="/art+sci" >Art + Sci</a>
+    <a class="nav-link active" routerLink="/history" >Historia</a>
     <div class="animation start-home"></div>
 </div>
 
@@ -16,4 +16,3 @@
     </div>
   </div>
  </div>
-<app-materiales></app-materiales>
